# root

./: .gitignore  README.md  pyproject.toml
docs/: database.md
sec_edgar/: annotation_defs.py  cli.py  client.py  computed.py  db.py  export.py  metrics.py  parser.py  pipeline.py  ratio_defs.py  reports.py
tests/: test_annotations.py  test_cli.py  test_computed.py  test_db.py  test_formatting.py  test_parser.py  test_reports.py
